Bug #52453: make popups more visible

--- a/management/univention-web/css/popups.styl
+++ b/management/univention-web/css/popups.styl
@@ -3,6 +3,9 @@
 	border-radius: 8px
 	overflow: hidden
 
+.dijitPopup:not(.dijitTooltipDialogPopup)
+	border: 1px solid var(--color-grey40)
+
 .dijitMenu,
 .dijitTimePicker
 	border: none
